# autark

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: cloc.yml  rust.yml
crates/autark/: Cargo.toml
crates/autark-client/: Cargo.toml
crates/autark-client/examples/: rolling_remote.rs
crates/autark-client/src/: lib.rs  prelude.rs
crates/autark-client/src/onceframe/: mod.rs
crates/autark-client/tests/: hello_world.rs  rolling_a.rs  rolling_remote.rs  titanic_a.rs
crates/autark-dataframe/: .gitignore  Cargo.toml
crates/autark-dataframe/src/: dataadapter.rs  engine.rs  error.rs  lib.rs  series.rs
crates/autark-dataframe/src/arrow_interop/: mod.rs
crates/autark-dataframe/src/dataframe/: dtype.rs  metadata.rs  mod.rs  schema.rs  variant.rs
crates/autark-dataframe/src/dataframe/preprocessing/: mod.rs
crates/autark-dataframe/src/mpera2/: artifact.rs  codegen.rs  dataadapter.rs  flag.rs  mod.rs  pipeline.rs  program.rs  pyfn.rs  runtime.rs  with_tinygrad.rs
crates/autark-dataframe/src/mpera2/element/: comparsion.rs  mod.rs
crates/autark-dataframe/src/mpera2/op/: mod.rs  op.rs  oppool.rs  opref.rs
crates/autark-dataframe/src/mpera2/tensor/: filter.rs  general.rs  mod.rs
crates/autark-dataframe/src/onceframe/: mod.rs
crates/autark-dataframe/src/readers/: csv.rs  json.rs  mod.rs
crates/autark-dataframe/src/sink/: mod.rs  stdout.rs  void.rs
crates/autark-dataframe/src/slimframe/: mod.rs
crates/autark-dataframe/tests/: common.rs  hello_world.rs  sample.jsonl  titanic_a.rs
crates/autark-enhanced-reader/: Cargo.toml
crates/autark-error/: Cargo.toml
crates/autark-py/: Cargo.toml  pyproject.toml
crates/autark-reader/: Cargo.toml
crates/autark-sinks/: Cargo.toml
crates/autark-tensor/: Cargo.toml
crates/autark-tensor/src/: error.rs  lib.rs  with_tinygrad.rs
crates/autark-tensor/src/tensor/: arithmetic.rs  arrow_interop.rs  arrow_to.rs  equality.rs  filter.rs  general.rs  mod.rs
crates/autark/examples/: rolling_remote.rs
crates/autark/src/: lib.rs  prelude.rs
crates/autark/src/onceframe/: mod.rs
crates/autark/tests/: rolling_a.rs  rolling_remote.rs
crates/mpera/: Cargo.toml  build.rs
crates/mpera/src/: artifact.rs  codegen.rs  dataadapter.rs  error.rs  flag.rs  lib.rs  output.rs  pipeline.rs  program.rs  programbuilder.rs  programmetadata.rs  programpayload.rs  pyfn.rs  runtime.rs  with_tinygrad.rs
crates/mpera/src/op/: mod.rs  op.rs  oppool.rs
crates/mpera/src/postprocessing/: mod.rs
crates/mpera/src/realizer/: mod.rs
crates/mpera/templates/codegen/: prefix.py
crates/mpera2/: .gitignore  Cargo.toml
crates/with-tinygrad/: Cargo.toml
docs/: mkdocs.yml  pyproject.toml
docs2/internal/: CONTEMPORARY_MPERA_ARCHITECTUR.md
extra/brownianhose/: .gitignore  README.md  main.py  pyproject.toml
extra/datasets/: string_0.csv  titanic_train_0.csv
fuzz/data/: aapl.csv  cpu_usage_a.csv  transactions_a.csv
fuzz/tgexper/: a.py
roadmap/: ROADMAP.md  TODO.md  groupby.md
scripts/: all_unwraps.sh  loc_naive.sh
(+46 files in other folders)
