[package]
name = "autark-client"
version = "0.1.0"
edition = "2024"

[dependencies]
autark-error = { path = "../autark-error" }
autark-reader = { path = "../autark-reader" }
autark-sinks = { path = "../autark-sinks" }
mpera = { path = "../mpera" }
arrow = { version = "=56.2.0", features = [ "prettyprint" ] }
arrow-schema = { version = "=56.2.0", features = [ ] }
