[package]
name = "autark_dataframe"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "=2.0.17"
mpera  = { path = "../mpera" }
autark_tensor = { path = "../autark-tensor" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

arrow = { version = "=56.2.0", features = [ "prettyprint" ] }
arrow-csv = "=56.2.0"
arrow-json = "=56.2.0"
