[package]
name = "autark_tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "=0.26", features = ["auto-initialize", "serde"] }
thiserror = "=2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
autark_error = { path = "../autark-error" }

arrow = "=56.2.0"
