[package]
name = "mpera"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "=0.26", features = ["auto-initialize", "serde"] }
thiserror = "=2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

arrow = "=56.2.0"
autark_tensor = { path = "../autark-tensor" }
autark_dataframe = { path = "../autark-dataframe" }
autark_error = { path = "../autark-error" }

log = "=0.4.28"
